# chat-analyzer-v2

./: .gitignore  README.md
backend/: .env.example  README.md  index.ts  package.json  tsconfig.json
backend/go-worker/: .env.example  README.md  go.mod  main.go
backend/prisma/: schema.prisma  seed.ts
backend/scripts/: bootstrap-admin.ts
backend/src/: app.test.ts  app.ts  server.ts
docs/: design.md  flow-charts.md  insight.md  official-pancake-api.yaml  seam1-control-plane-minimal-schema-matrix.md  seam1-lean-schema-matrix.md  seam2-analysis-schema-matrix.md  system-schema-matrix.md  ui-flows.md
docs/adk-docs/: config.md  custom-agents.md  gemini-models.md  llm-agents.md  typescript-quickstart.md
docs/pancake-api-samples/: README.md
docs/plans/: ai-runtime-selection-design-gate.md  codebase-design-alignment-remediation-plan-2026-04-06.md  codebase-design-alignment-subagent-ledger-2026-04-06.md  config-ops-onboarding-sample-subagent-ledger-2026-04-05.md  etl-control-plane-operator-readiness-plan-2026-04-15.md  eu1-analysis-orchestration-execution-ledger.md  eu2-semantic-mart-execution-ledger.md  eu3-thread-investigation-execution-ledger.md  (+22 more)
frontend/: .env.example  .gitignore  index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
proto/: conversation_analysis.proto
service/: .env.example  README.md  analysis_executor.py  analysis_models.py  analysis_runtime.py  config.py  conversation_analysis_pb2.py  conversation_analysis_pb2_grpc.py  main.py  pyproject.toml
service/tests/: test_executor.py  test_http_api.py
(+227 files in other folders)
