[project]
name = "service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "fastapi>=0.135.3",
    "google-adk>=1.28.1",
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.42.0",
]
